--- a/css/style.css
+++ b/css/style.css
@@ -880,7 +880,7 @@ body {
   right: 22px;
   top: 14%;
   transform: translateY(20%);
-  color: black;
+  color: #000000;
   opacity: 0.3;
 }
 
@@ -1066,7 +1066,7 @@ body {
   border: 2px solid #e5e5e5;
   outline: none;
   font-family: inherit;
-  color: #333;
+  color: #333333;
   cursor: pointer;
   -webkit-appearance: none;
   appearance: none;
@@ -1176,7 +1176,7 @@ body {
   opacity: 0.8;
 }
 
-.hotel-link:active {
+.hotel-link:focus {
   opacity: 0.6;
 }
 
@@ -1349,12 +1349,12 @@ body {
 }
 
 .pagination-current {
-  color: #000;
+  color: #000000;
   background-color: #f2f2f2;
 }
 
 .pagination-more {
-  color: #000;
+  color: #000000;
   background-color: #ffffff;
 }
 
@@ -1728,7 +1728,7 @@ body {
 
 .modal-search-button:disabled {
   background-color: #e5e5e5;
-  color: #ffffff
+  color: #ffffff;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -1736,7 +1736,7 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-input[type='number'],
+input[type="number"],
 input[type="number"]:hover,
 input[type="number"]:focus {
   -webkit-appearance: none;
